syntax = "proto3";
option go_package = ".;proto";
import "google/protobuf/empty.proto";
//protoc -I . user.proto --go_out=plugins=grpc:.
service User{
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
  rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse);
  rpc BatchGetUserDetail(UserBasicInfo) returns (UserDetailInfoList);
  rpc GetUserVideoList(UserBasicInfo) returns(VideoIdList);
  rpc GetUserFollows (UserBasicInfo) returns (UserFollowsInfo);
  rpc GetUserFollowers (UserBasicInfo) returns (UserFollowersInfo);
  rpc UpdateUserInfo (UserDetailInfo) returns (google.protobuf.Empty);
  rpc FavoriteAction (favInfo)returns(google.protobuf.Empty);
  rpc RelationAction(RelationActionInfo)returns(google.protobuf.Empty);
  //TODO 点赞列表  显示用户所有点赞的视频
  //  rpc GetFavList (UserBasicInfo) returns();
}

message RelationActionInfo {
  int32 userId = 1;
  int32 toUserId = 2;
  int32 actionType = 3;
}
message favInfo {
  int32 userId = 1;
  int32 videoId = 2;
  int32 actionType = 3;
}
message CreateUserInfo {
  string  username = 1;
  string password = 2;
}

message UserInfoResponse {
  int32 user_id = 3;
}

message PasswordCheckInfo {
  string  username = 1;
  string password = 2;
}

message CheckResponse {
  int32 id = 1;
  bool success = 2;
}

message UserBasicInfo {
  repeated int32 user_id = 1;
}

message UserDetailInfo {
  int32 id = 1;
  string  name = 2;
  string passward = 3;
  int32  follow_count = 4;
  int32 follower_count = 5;
  repeated int32 follows = 6;
  repeated int32 followers = 7;
  repeated int32 Videos = 8;
  repeated int32 comments = 9;
  repeated int32 FavList = 10;
}
message UserDetailInfoList {
  repeated UserDetailInfo userDetailInfoList = 1;
}
message VideoIdList {
  repeated int32 videoId = 1;
}

message UserFollowsInfo {
  repeated int32 FollowId = 1;
}

message UserFollowersInfo {
  repeated int32 FollowerId = 1;
}
